Social: remove z-index for pm [fixes #76624410]

--- a/client/Social/Activity/styl/activity.styl
+++ b/client/Social/Activity/styl/activity.styl
@@ -1385,7 +1385,6 @@ span.collapsedtext
         top             2px
         left            -62px
         text-align      right
-        z-index         10
         abs()
 
         time
